rp_1/project/old/agent/deployment-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent
  namespace: desire6g
  labels:
    app: agent
spec:
  selector:
    matchLabels:
      app: agent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: agent
    spec:
      containers:
        - name: agent-container
          image: desire6g/agent:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: agent-volume
              mountPath: /app/config.json
              subPath: config-agent.json
      volumes:
        - name: agent-volume
          configMap:
            name: agent-config
      restartPolicy: Always
