rp_1/project/old/agent/service-agent.yaml
apiVersion: v1
kind: Service
metadata:
  name: agent-service
  namespace: desire6g
  labels:
    app: agent
spec:
  selector:
    app: agent
  ports:
    - name: api-port
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
