rp_1/project/old/agent/ingress-agent.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agent-ingress
  namespace: desire6g
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: agent
spec:
  ingressClassName: nginx
  rules:
    - host: agent.desire6g.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agent-service
                port:
                  number: 80
